Update docstring for controller MU-209